--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "resources"]
-	path = resources
+[submodule "resources/compass"]
+	path = resources/compass
 	url = git@github.com:ff0000/red-compass-framework.git
