--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "resources/compass"]
 	path = resources/compass
 	url = git@github.com:ff0000/red-compass-framework.git
+[submodule "static/media/js"]
+	path = static/media/js
+	url = git@github.com:ff0000/rosy.git
