--- a/.gitmodules
+++ b/.gitmodules
@@ -3,4 +3,7 @@
 	url = git@github.com:ff0000/red-compass-framework.git
 [submodule "static/js"]
 	path = static/js
-	url = git@github.com:ff0000/rosy.git
+	url = git@github.com:ff0000/rosy
+[submodule "rosy"]
+	path = rosy
+	url = git@github.com:ff0000/rosy
