--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "rosy"]
 	path = rosy
 	url = git@github.com:ff0000/rosy
+[submodule "project/static/js"]
+	path = project/static/js
+	url = git@github.com:ff0000/rosy.git
