--- a/resources/tasks/config/jshint.yml
+++ b/resources/tasks/config/jshint.yml
@@ -23,16 +23,16 @@ exclude_paths:
 adsafe:   false     # true if ADsafe rules should be enforced. See http://www.ADsafe.org/
 bitwise:  true      # true if bitwise operators should not be allowed
 newcap:   true      # true if Initial Caps must be used with constructor functions
-eqeqeq:   false     # true if === should be required (for ALL equality comparisons)
-immed:    false     # true if immediate function invocations must be wrapped in parens
+eqeqeq:   true      # true if === should be required (for ALL equality comparisons)
+immed:    true      # true if immediate function invocations must be wrapped in parens
 nomen:    false     # true if initial or trailing underscore in identifiers should be forbidden
-onevar:   false     # true if only one var statement per function should be allowed
+onevar:   true      # true if only one var statement per function should be allowed
 plusplus: false     # true if ++ and -- should not be allowed
 regexp:   false     # true if . and [^...] should not be allowed in RegExp literals
 safe:     false     # true if the safe subset rules are enforced (used by ADsafe)
 strict:   false     # true if the ES5 "use strict"; pragma is required
 undef:    true      # true if variables must be declared before used
-white:    false     # true if strict whitespace rules apply (see also 'indent' option)
+white:    true      # true if strict whitespace rules apply (see also 'indent' option)
 
 # "allow" type options (false means potentially more warnings)
 
@@ -50,11 +50,12 @@ sub:      false     # true if subscript notation may be used for expressions bet
 # other options
 
 maxlen:   160       # Maximum line length
-indent:   2         # Number of spaces that should be used for indentation - used only if 'white' option is set
-maxerr:   50        # The maximum number of warnings reported (per file)
+indent:   4         # Number of spaces that should be used for indentation - used only if 'white' option is set
+maxerr:   100       # The maximum number of warnings reported (per file)
 passfail: false     # true if the scan should stop on first error (per file)
 # following are relevant only if undef = true
-predef:   ''        # Names of predefined global variables - comma-separated string or a YAML array
+# Names of predefined global variables - comma-separated string or a YAML array
+predef:   '$,console,Class,Modernizr,History'
 browser:  true      # true if the standard browser globals should be predefined
 rhino:    false     # true if the Rhino environment globals should be predefined
 windows:  false     # true if Windows-specific globals should be predefined
@@ -63,10 +64,10 @@ devel:    false     # true if functions like alert, confirm, console, prompt etc
 
 # jshint options
 loopfunc: true      # true if functions should be allowed to be defined within loops
-asi:      true      # true if automatic semicolon insertion should be tolerated
-boss:     true      # true if advanced usage of assignments and == should be allowed
+asi:      false     # true if automatic semicolon insertion should be tolerated
+boss:     false     # true if advanced usage of assignments and == should be allowed
 couch:    true      # true if CouchDB globals should be predefined
-curly:    false     # true if curly braces around blocks should be required (even in if/for/while)
+curly:    true      # true if curly braces around blocks should be required (even in if/for/while)
 noarg:    true      # true if arguments.caller and arguments.callee should be disallowed
 node:     true      # true if the Node.js environment globals should be predefined
 noempty:  true      # true if empty blocks should be disallowed
