Adding more default binary types. These will be pretty common in internal project.

--- a/.gitattributes
+++ b/.gitattributes
@@ -6,4 +6,14 @@
 *.exe binary
 *.eot binary
 *.ttf binary
+*.otf binary
 *.pdf binary
+*.woff binary
+
+# Flash Binaries
+*.swc binary
+*.fla binary
+*.swf binary
+*.as  binary
+
+*.mp3 binary
