--- a/resources/tasks/config/jshint.yml
+++ b/resources/tasks/config/jshint.yml
@@ -56,7 +56,7 @@ maxerr:   100       # The maximum number of warnings reported (per file)
 passfail: false     # true if the scan should stop on first error (per file)
 # following are relevant only if undef = true
 # Names of predefined global variables - comma-separated string or a YAML array
-predef:   '$,jQuery,console,Class,Modernizr,History'
+predef:   '$,jQuery,console,Class,Modernizr,History,RED,FB'
 browser:  true      # true if the standard browser globals should be predefined
 rhino:    false     # true if the Rhino environment globals should be predefined
 windows:  false     # true if Windows-specific globals should be predefined
