Adding a task to optimize images.
Usage:
	rake dev:smush

--- a/resources/tasks/config/Gemfile
+++ b/resources/tasks/config/Gemfile
@@ -10,6 +10,8 @@ gem "fssm", ">= 0.2.7"
 gem "closure-compiler", ">= 1.1.4"
 gem "term-ansicolor", ">= 1.0.7"
 gem "highline", "~> 1.6.8"
+gem "httpclient", ">= 2.2.4"
+gem "smusher", ">= 0.4.9"
 
 if OS == "darwin"
   gem "rb-fsevent", ">= 0.4.3.1"
