--- a/resources/tasks/config/Gemfile
+++ b/resources/tasks/config/Gemfile
@@ -3,7 +3,7 @@ source :rubygems
 OS = Gem::Platform.local.os
 
 gem "rake", ">= 0.9.2.2"
-gem "jshint", ">= 0.1.1"
+# gem "jshint", ">= 0.1.1"
 gem "sass", ">= 3.1.12"
 gem "compass", ">= 0.11.7"
 gem "fssm", ">= 0.2.8.1"
